@@ -340,6 +340,18 @@ void URI::setQuery(const std::string& query)
 }
 
 
+void URI::addQueryParameter(const std::string& param, const std::string& val)
+{
+	std::string reserved(RESERVED_QUERY);
+	reserved += "=&";
+	if (_query.empty()) _query.append(1, '?');
+	else _query.append(1, '&');
+	encode(param, reserved, _query);
+	_query.append(1, '=');
+	encode(val, reserved, _query);
+}
+
+
 std::string URI::getQuery() const
 {
 	std::string query;
